added scroll to listings card

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,40 +1,30 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 
-.App {
-  text-align: center;
+.leaflet-container {
+  height: 100%;
+  width: 100%;
+  margin-top: 0.5rem;
+  position: sticky;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.bg-dark2 {
+  background-color: #0a0b0c;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.bg-dark2:hover {
+  background-color: #101214;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.listings-text {
+  margin-bottom: 3rem;
+  text-transform: uppercase;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.listings-container {
+  max-height: 90vh;
+  overflow-y: scroll;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
