--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -135,6 +135,15 @@ h1{
   background-color: #f5f5f5
 }
 
+.map-box{
+  box-shadow: 2rem rgb(238, 238, 238);
+  padding: 3rem;
+  border-radius: 2rem;
+  border: 0.3rem solid rgb(238, 238, 238);
+  margin: auto;
+  background-color: #f5f5f5
+}
+
 .feature-icon{
   font-size: 1.5rem;
   color: #222529
